[tool.poetry]
name = "turtlebot_navigation"
version = "0.1.0"
description = "turtlebot_navigation using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.65.2,<1.0.0" }


[tool.poetry.scripts]
turtlebot_navigation = "turtlebot_navigation.main:run"
run_crew = "turtlebot_navigation.main:run"
train = "turtlebot_navigation.main:train"
replay = "turtlebot_navigation.main:replay"
test = "turtlebot_navigation.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
